Closed Bug 1705872 Opened 5 years ago Closed 5 years ago

[Fission] When redirect to a moz-extension:// url the back button doesn't work reliably

Categories

(Core :: DOM: Navigation, defect, P3)

Firefox 87
defect

Tracking

()

RESOLVED FIXED
90 Branch
Fission Milestone M8
Tracking Status
firefox90 --- fixed

People

(Reporter: kernp25, Assigned: peterv)

References

Details

Attachments

(4 files)

Attached file test.zip

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:87.0) Gecko/20100101 Firefox/87.0

Steps to reproduce:

  1. Install the test add-on in about:debugging
  2. Enter https://example.com/ in the address bar and click enter to load the page
  3. Now click the browser back button

Actual results:

The browser back button works fine for the first time but then you have to click more times (the click count increases every time you load https://example.com/) to get back to the previous page.

Expected results:

It should just work.

Attached video fyL6T9irIh.mp4

It seems to get fixed, if you set fission.bfcacheInParent to true.

The Bugbug bot thinks this bug should belong to the 'Firefox::Address Bar' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Address Bar

It seems to get fixed, if you set fission.bfcacheInParent to true.

needinfo'ing kmag because he said he would test whether this is related to Fission or BFCache.

The test extension redirects example.com to a moz-extension page. We seem to be adding a new session history entry for each example.com visit.

Fission Milestone: --- → ?
Flags: needinfo?(kmaglione+bmo)

Hi kernp25!
I was not able to reproduce this issue on latest Nighlty version 89.0a1a (2021-04-19)(64-bit) on Windows 10. I'll attach a file with evidence.
I've followed the next steps:

  1. Open about:debugging and Load temporary add-on using the file attached.
  2. Open a new tab and type: thttp://example.com/ in the address bar
  3. Press the back button and type the same http://example.com/
  4. Repeat step 3.
    Preference fission.bfcacheInParent was on Flase.
    Please let us know if the steps are correct.
    Could you try to reproduce it on the latest Nightly version and tell us your input? You can download it from here: https://nightly.mozilla.org/
Flags: needinfo?(kernp25)

You must have fission activated for this bug to reproduce.

Set fission.autostart to true in about:config.

Flags: needinfo?(kernp25)
Component: Address Bar → DOM: Navigation
Product: Firefox → Core
Severity: -- → S3
Status: UNCONFIRMED → NEW
Fission Milestone: ? → M8
Ever confirmed: true
Priority: -- → P3
Summary: [Fission] When redirect to a moz-extension:// url the back button doesn't work reliable → [Fission] When redirect to a moz-extension:// url the back button doesn't work reliably
Assignee: nobody → kmaglione+bmo
Status: NEW → ASSIGNED
Flags: needinfo?(kmaglione+bmo)
See Also: → 1707603

We think this is probably another manifestation as the same issue as bug 1707603. If Peter can confirm, then the bugs can be merged.

Assignee: kmaglione+bmo → nobody
Status: ASSIGNED → NEW
Flags: needinfo?(peterv)

I am not sure this is the same as bug 1707603. I can reproduce this one but not bug 1707603.

Assignee: nobody → peterv
Status: NEW → ASSIGNED
Flags: needinfo?(peterv)
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/def2e03a3881 Clear history's epoch in the parent when replacing BC. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: