Bug 1705872 - Clear history's epoch in the parent when replacing BC. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D116243